[tool]
[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = ["coloredlogs==15.0.1", "gym==0.18.0", "numpy==1.20.3", "pandas==1.2.4", "pomegranate==0.14.5", "psutil==5.8.0", "ray[rllib]==1.7.0", "scipy==1.7.0", "tqdm==4.61.1"]
requires-python = ">=3.9, <3.10"
license = {text = "BSD-3-Clause"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
