[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "p_tqdm==1.3.3",
    "pre-commit==2.13",
    "pytest==6.2.4",
    "pytest-cov==2.12.1",
]
doc = [
    "sphinx==3.5.4",
    "sphinx-autodoc-typehints==1.12.0",
    "sphinx-book-theme==0.0.42",
]

[project]
name = "ABIDES"
version = "0.0.1"
description = "Agent-Based Interactive Discrete Event Simulation environment"
dependencies = [
    "coloredlogs==15.0.1",
    "gym==0.18.0",
    "numpy==1.20.3",
    "pandas==1.2.4",
    "pomegranate==0.14.5",
    "psutil==5.8.0",
    "ray[rllib]==1.7.0",
    "scipy==1.7.0",
    "tqdm==4.61.1",
]
requires-python = ">=3.8, <3.9"
license = { text = "BSD-3-Clause" }

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
